updated for the new Playnite.SDK

--- a/packages.config
+++ b/packages.config
@@ -3,8 +3,7 @@
   <package id="AngleSharp" version="0.9.9" targetFramework="net462" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net462" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
-  <package id="PlayniteSDK" version="5.5.0" targetFramework="net462" />
+  <package id="PlayniteSDK" version="6.0.0-preview3" targetFramework="net462" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net462" />
   <package id="SteamKit2" version="1.8.3" targetFramework="net462" />
   <package id="System.IO.Abstractions" version="2.1.0.227" targetFramework="net462" />
