--- a/source/extension.yaml
+++ b/source/extension.yaml
@@ -1,14 +1,14 @@
 ﻿Id: playnite-successstory-plugin
 Name: SuccessStory
 Author: Lacro59
-Version: 1.4.4
+Version: 2.0
 Module: SuccessStory.dll
 Type: GenericPlugin
 Icon: icon.png
 Links:
-  - Name: Plugin forum
+  - Name: Forum
     Url: https://playnite.link/forum/thread-275.html
-  - Name: Plugin Github
+  - Name: Github
     Url: https://github.com/Lacro59/playnite-successstory-plugin
-  - Name: Plugin translations
+  - Name: Translate
     Url: https://crowdin.com/project/playnite-extensions
